# forIGES

./: CMakeLists.txt  LICENSE  Makefile  README.md  configure  ford.md  fpm.toml  makefile.inc
config/: Liblist  libpath  makerules.Linux_intel-ifx  makerules.Linux_nvidia  makevars.Linux_amd  makevars.Linux_cray  makevars.Linux_gcc  makevars.Linux_intel-ifort  makevars.Linux_intel-ifx  makevars.Linux_nvidia  paths  testlist
doc/: A Hitchhikers Guide To forIGES.md
examples/: RogersBsurf.txt
src/: DElist.F90  IGES_Dsection.F90  IGES_Gsection.F90  IGES_Psection.F90  IGES_params.F90  IGES_utils.F90  Makefile  PElist.F90  commandLineUtils.F90  forIGES.F90  objslist  thislib.inc
test/: Makefile  README_TESTS.md  RogersBsurf.igs  testArrayFilter.F90  testFilterWrite.F90  testGenNURBSsurf.F90  testReadFile.F90  testReadList.F90  testWriteFile.F90  tfiles.lst
test/test_files/: 108-000m.igs  114-000.igs  README_TEST_FILES.md  f100xm.igs  f110xm.igs  f112pxm.igs  surf128.iges  surf128n.igs
